methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:4: error: not found: value pink
       if(isFacingTrail(pink)){
                        ^